# divvee

./: .env  Cargo.toml  Justfile  README.md
cli/: Cargo.toml  README.md
cli/src/: config.rs  create.rs  edit.rs  list.rs  main.rs  print.rs  reindex.rs  show.rs  util.rs
core/: Cargo.toml  schema.sql
core/src/: db.rs  error.rs  git.rs  lib.rs  repo.rs  task.rs
