[package]
name = "divvee"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
canonical-path = "2.0.2"
chrono = "0.4.31"
clap = { version = "4.4.18", features = ["env"] }
gray_matter = "0.2.6"
itertools = "0.12.0"
kdl = "4.6.0"
libpijul = "1.0.0-beta.9"
log = "0.4.20"
markdown = "1.0.0-alpha.16"
rand = "0.8.5"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
serde_yaml = "0.9.30"
tempfile = "3.9.0"
thiserror = "1.0.56"
toml = "0.8.8"
sqlx = { version = "0.7", features = [ "runtime-tokio", "json", "sqlite", "macros" ] }
owning_ref = "0.4.1"

[dev-dependencies]
tokio = "1.36.0"
